# modern-python-project

./: .gitignore  .markdownlint.yaml  LICENSE  README.md  devenv.nix  devenv.yaml  pyproject.toml  renovate.json
.cursor/rules/: extracted-def-needs-to-go-before-first-usage.mdc  fix-tests-leave-impl-alone.mdc  minimal-changes.mdc  relative-imports.mdc
.github/workflows/: test.yml
modern_python_project/: __init__.py  main.py  my_function.py
modern_python_project_tests/: __init__.py  test_cli.py  test_my_function.py
modern_python_project_tests/__snapshots__/: test_cli.ambr  test_my_function.ambr
